fix formatting on mobile

--- a/site.css
+++ b/site.css
@@ -6,11 +6,16 @@
 }
 
 .game-tile {
+    height: 50px;
+    display: flex; 
+    justify-content: center;
+    align-items: center;
     border: 1px solid black;
     border-radius: 5px;
     margin: 2px;
     width: calc(25% - 6px);
     text-align: center;
+    padding: 5px;
 }
 
 .game-tile.selected {
